bk_ida/gccida/g2/reachable_next_level
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3313:1: error: must use 'enum' tag to refer to type 'reachable_code'
reachable_code  reachable_next_level(  struct eh_region *region, tree type_thrown,  struct reachable_info *info) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3315:1: error: must use 'enum' tag to refer to type 'eh_region_type'
eh_region_type type; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3316:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type_list; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3317:1: error: must use 'enum' tag to refer to type 'reachable_code'
reachable_code result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3319:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *aka; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3320:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3321:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3324:1: error: must use 'enum' tag to refer to type 'reachable_code'
reachable_code ret; // [rsp+Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3377:20: error: expected expression
aka = ( tree_node *)prev_try->aka; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3377:9: error: use of undeclared identifier 'tree_node'
aka = ( tree_node *)prev_try->aka; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3402:20: error: expected expression
v11 = ( tree_node *)prev_try->aka; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/except.c:3402:9: error: use of undeclared identifier 'tree_node'
v11 = ( tree_node *)prev_try->aka; 
        ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reachable_next_level/src/obj/except.o] Error 1
